--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "expo": "^49.0.21",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.72.6"
+    "react-native": "0.72.6",
+    "react-native-circular-progress-indicator": "^4.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
