--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.5.11",
-    "expo": "^49.0.21",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/stack": "^6.3.20",
+    "expo": "~49.0.15",
     "expo-status-bar": "~1.6.0",
+    "link": "^2.1.0",
     "react": "18.2.0",
-    "react-native": "0.72.6",
+    "react-native": "^0.72.6",
     "react-native-circular-progress-indicator": "^4.4.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "~3.3.0"
