--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/stack": "^6.3.20",
+    "@tensorflow-models/posenet": "^2.2.2",
     "expo": "~49.0.15",
+    "expo-camera": "~13.4.4",
     "expo-status-bar": "~1.6.0",
     "link": "^2.1.0",
     "react": "18.2.0",
     "react-native": "^0.72.6",
     "react-native-circular-progress-indicator": "^4.4.2",
-    "react-native-linear-gradient": "^2.8.3"
+    "react-native-linear-gradient": "^2.8.3",
+    "yarn": "^1.22.21"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
