--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "firebase": "^10.8.1",
     "link": "^2.1.0",
     "react": "18.2.0",
-    "react-native": "^0.72.6",
+    "react-native": "0.73.6",
     "react-native-circular-progress-indicator": "^4.4.2",
     "react-native-linear-gradient": "^2.8.3",
     "yarn": "^1.22.21"
